--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            color: #333;
+            color: #e0e0e0;
+            background-color: #1a1a1a;
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
         }
-        h1 {
+        h1, h2 {
             color: #ff69b4;
         }
         .feature-list {
@@ -26,11 +27,17 @@
         .download-button {
             display: inline-block;
             background-color: #ff69b4;
-            color: white;
+            color: #1a1a1a;
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
+        }
+        a {
+            color: #ff69b4;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
